# slidecoding

./: .gitignore  LICENSE  README.md  slidecoding.cabal
app/: Console.hs  Slider.hs
demo/: demo.cabal  presentation.yaml  stack.yaml
demo/app/: Main.hs
demo/assets/: custom.css
demo/slides/: chapter1.md  chapter2.md
demo/src/: Example1.hs  Example2.hs  Utils.hs
src/: Slidecoding.hs
src/Slidecoding/: Assets.hs  Browser.hs  CabalHelper.hs  GHCI.hs  Indexer.hs  Presentation.hs  ReplSession.hs  SlidesWriter.hs  Template.hs  Types.hs  WebSockets.hs
web/: highlight-pack-haskell.js  slidecoding.css
web/deckjs/extensions/lichess/: deck.lichess.js
web/deckjs/extensions/repl/: deck.repl.css  deck.repl.js
