name:                slidecoding
version:             0.1.0.0
synopsis:            Slides & livecoding
description:         Please see README.md
homepage:            https://github.com/ptitfred/slidecoding#readme
license:             GPL-3
license-file:        LICENSE
author:              Frédéric Menou
maintainer:          frederic.menou@gmail.com
copyright:           2016 Frédéric Menou
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
data-dir:            web
data-files:          highlight-pack-haskell.js
                   , lambda.png
                   , paraiso-dark-min.css
                   , deckjs/jquery.min.js
                   , deckjs/modernizr.custom.js
                   , deckjs/core/deck.core.js
                   , deckjs/core/deck.core.css
                   , deckjs/extensions/fit/deck.fit-fs.css
                   , deckjs/extensions/fit/deck.fit.js
                   , deckjs/extensions/goto/deck.goto.css
                   , deckjs/extensions/menu/deck.menu.css
                   , deckjs/extensions/navigation/deck.navigation.css
                   , deckjs/extensions/status/deck.status.css
                   , deckjs/extensions/scale/deck.scale.css
                   , deckjs/themes/style/*.css
                   , deckjs/themes/transition/*.css

library
  hs-source-dirs:      src
  exposed-modules:     Slidecoding
                     , Slidecoding.Types
  other-modules:       Slidecoding.Assets
                     , Slidecoding.Browser
                     , Slidecoding.CabalHelper
                     , Slidecoding.GHCI
                     , Slidecoding.Indexer
                     , Slidecoding.Presentation
                     , Slidecoding.ReplSession
                     , Slidecoding.SlidesWriter
                     , Slidecoding.Template
                     , Slidecoding.WebSockets
                     , Paths_slidecoding
  ghc-options:         -Wall -Werror
  build-depends:       base >= 4.8 && < 5
                     , directory
                     , filepath
                     , text
                     , aeson
                     , yaml
                     , ghc-mod
                     , base64-string
                     , websockets
                     , transformers
                     , process
                     , haskell-src-exts
                     , bytestring
                     , Cabal
                     , pandoc
                     , pandoc-types
                     , blaze-html
                     , containers
  default-language:    Haskell2010

executable console
  hs-source-dirs:      app
  main-is:             Console.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , slidecoding
                     , transformers
  default-language:    Haskell2010

executable slider
  hs-source-dirs:      app
  main-is:             Slider.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , slidecoding
                     , directory
                     , filepath
                     , text
  default-language:    Haskell2010

test-suite slidecoding-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , slidecoding
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ptitfred/slidecoding
